--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                      </div>
 
                      <div class="col-md-4 status">
-                        <h5>$1,278</h5>
-                        <h5>$0</h5>
-                        <h5>$1,278</h5>
+                        <h5>$<span id="product-sub-total">1,278</span></h5>
+                        <h5>$<span id="product-tax-amount">127.8</span></h5>
+                        <h5>$<span id="product-total-price">1,405.8</span></h5>
                      </div>
                   </div>
                </div>
